--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,13 @@
 			<version>2.9.2</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.uuid/java-uuid-generator
+		<dependency>
+			<groupId>com.fasterxml.uuid</groupId>
+			<artifactId>java-uuid-generator</artifactId>
+			<version>3.1.5</version>
+		</dependency> -->
+
 	</dependencies>
 
 	<build>
